--- a/http-client/index.html
+++ b/http-client/index.html
@@ -11,6 +11,17 @@
             <div id="app"></div>
         </section>
     </div>
+    <script>
+    let playerData = {
+        "username":"test",
+        "idle":77930,
+        "idlePoints":122,
+        "money":536440,
+        "cards":{"1":1,"2":1,"3":1,"4":1},
+        "booster":false,
+        "title":"Neko"
+    }
+    </script>
     <script src="/dist/build.js"></script>
 </body>
 </html>
