--- a/http-client/index.html
+++ b/http-client/index.html
@@ -41,7 +41,7 @@
         "idle":77930,
         "idlePoints":122,
         "money":536440,
-        "cards":{"1":1,"2":1,"3":1,"4":1},
+        "cards":{"2":1,"3":1,"4":1},
         "booster":false,
         "title":"Neko"
     }
